First stab at Fable
