# dominion/api/user/register.py
@@ -50,41 +50,4 @@ async def post(body, **kwargs):
     await sync_to_async(view.send_activation_email)(obj)
 
     return await UserSerializer(instance=obj).adata, 201
-    User = get_user_model()
-    body["is_active"] = False
-
-    # Create an in-memory object so we can run checks without attempting to save to the database.
-    # This provides us with clean error messages.
-    try:
-        obj = User(**body)
-        await sync_to_async(obj.full_clean)()
-    except ValidationError as e:
-        if hasattr(e, "error_dict"):
-            return e.message_dict, 422
-        else:
-            return {"message": e.messages[0]}, 422
-
-    # Actually create and persist an object
-    try:
-        obj = await User.objects.acreate(**body)
-    except ValidationError as e:
-        if hasattr(e, "error_dict"):
-            return e.message_dict, 422
-        else:
-            return {"message": e.messages[0]}, 422
-
-    # Set password
-    await sync_to_async(obj.set_password)(body["password"])
-    await obj.asave(update_fields=["password"])
-
-    # Reuse the Django registration view. Build a minimal Django HttpRequest from the Starlette request.
-    starlette_request = request._starlette_request
-    dr = HttpRequest()
-    dr.META = dict(starlette_request.headers)
-    dr.META["SERVER_NAME"] = starlette_request.url.hostname
-    dr.META["SERVER_PORT"] = str(starlette_request.url.port or 443)
-    view = RegistrationView(request=dr)
-    await sync_to_async(view.send_activation_email)(obj)
-
-    return await UserSerializer(instance=obj).adata, 201
 
